<resources>
    <string name="app_name">JustIdeas</string>
    <string name="motto">Expression &amp; Discretion</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User Name</string>
    <string name="nav_header_subtitle">Users Email</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>

    <string name="menu_cart">CART</string>
    <string name="menu_account">MY ACCOUNT</string>
    <string name="menu_orders">ORDERS</string>
    <string name="menu_help">HELP &amp; FAQS</string>
    <string name="menu_home">HOME</string>

    <string name="children">Children</string>
    <string name="women_s">Women\'s</string>
    <string name="men_s">Men\'s</string>
    <string name="priceTag">RRP £ </string>
    <string name="menu_settings">SETTINGS</string>
    <string name="menu_logout">LOGOUT</string>
</resources>
